Avoid optimizing the background with border image outsets

We attempt to optimize the background image destination rectangle to
avoid pointlessly painting under borders, thus allowing more non-tiling
image draws. But that breaks when there is a border image with outsets
because in that case, despite an opaque border, the background image
may not cover the border area.

Also clean up the conditional that prevents the optimization.

R=fmalita@chromium.org
BUG=827871

Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: Ibd0fb4307fd2d7b7df4421f18fb07da2c669aa79
Reviewed-on: https://chromium-review.googlesource.com/996884
Commit-Queue: Stephen Chenney <schenney@chromium.org>
Reviewed-by: Florin Malita <fmalita@chromium.org>
Cr-Commit-Position: refs/heads/master@{#548495}
Former-commit-id: 55ada2785514d3e227a2d0eae4a9a8248c19d9db